Spacing issues addressed

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a{
     /*background-color: rgba(128,128,128,.2);
     border: medium solid #999;*/
     float: right;
-    margin: 7px 50px 0 0;
+    margin: 55px 50px 0 0;
 }
 
 .chartBackground{
